--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -24,25 +24,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
-        pip install pytest mypy black isort flake8
+        pip install -e ".[dev]"
 
     - name: Run tests
       run: |
         pytest
 
-    - name: Check types with mypy
+    - name: Run example script
       run: |
-        mypy .
-
-    - name: Check style with black
-      run: |
-        black . --check
-
-    - name: Check imports with isort
-      run: |
-        isort . --check-only --diff
-
-    - name: Check style with flake8
-      run: |
-        flake8 .
+        python example.py
