chore: update project configuration and dependencies
- Update Python version requirement to 3.10+ for pandas compatibility
- Add mypy exclude patterns for venv and build directories
- Update GitHub Actions workflow with all quality checks

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,22 @@ jobs:
       run: |
         pytest
 
+    - name: Check types with mypy
+      run: |
+        mypy .
+
+    - name: Check style with black
+      run: |
+        black . --check
+
+    - name: Check imports with isort
+      run: |
+        isort . --check-only --diff
+
+    - name: Check style with flake8
+      run: |
+        flake8 .
+
     - name: Run example script
       run: |
         python example.py
