--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dev = [
     "pre-commit>=3.6.2",
     "flake8>=7.0.0",
     "isort>=5.13.2",
+    "pandas-stubs>=2.2.0",
+    "types-python-dateutil>=2.9.0",
 ]
 
 [tool.black]
@@ -43,6 +45,13 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 check_untyped_defs = true
+exclude = [
+    'venv/',
+    '.venv/',
+    'env/',
+    'build/',
+    'dist/',
+]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
