feat(release): bump version to 1.1.0 and add Streamlit interface
This commit introduces several major improvements:

Features:
- Add Streamlit web interface for interactive portfolio analysis
- Implement live demo capability with Streamlit Cloud deployment
- Add market utilities for date handling and validation

Improvements:
- Fix annualized return calculation using weighted average
- Refactor utility functions into separate modules
- Enhance error handling for non-trading days
- Add portfolio state persistence in Streamlit

Documentation:
- Update CHANGELOG with version 1.1.0
- Add Streamlit deployment instructions
- Improve code documentation

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: [ main, dev ]
+    branches: [ "main", "dev" ]
 
 jobs:
   test:
@@ -27,8 +27,7 @@ jobs:
         pip install -e ".[dev]"
 
     - name: Run tests
-      run: |
-        pytest
+      run: pytest
 
     - name: Check types with mypy
       run: |
@@ -46,6 +45,5 @@ jobs:
       run: |
         flake8 .
 
-    - name: Run example script
-      run: |
-        python example.py
+    - name: Run example
+      run: python example.py
